plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.3'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'io.github.daengdaenglee'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation platform('software.amazon.awssdk:bom:2.20.143')
    implementation 'software.amazon.awssdk:dynamodb-enhanced'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

bootBuildImage {
    tags.add("${project.name}:latest")

    if (project.hasProperty('tag')) {
        tags.add("${project.getProperties()['tag']}")
    }
}

tasks.register('printVersion') {
    doLast {
        println(project.version)
    }
}
